# waterSpec_dev

./: AUDIT.md  AUDIT_REPORT.md  BETA_VALUES_FROM_LITERATURE.md  BETA_VALUES_LIBRARY.md  CHANGELOG.md  CONTRIBUTING.md  DATASET_SOURCES.md  Haar_SF_New_Analysis_Methods.md  METHODS_SUMMARY.md  NEW_EXAMPLE.md  NEW_FEATURES_PROPOSAL.md  Next_steps_plan.md  README.md  REFERENCES.md  TEST_REPORT.md  VALIDATION_REPORT.md  air_quality_report.md  analyze_air_quality.py  benchmark2.py  benchmark_ols.py  beta_sweep_results.csv  haar_percentiles.md  plan.md  pyproject.toml  reproduce_beta_sweep.py  run_all_examples.py  run_examples.py  run_psresp_beta_sweep.py  run_readme_example.py  run_tutorial_01.py  run_tutorial_06.py  run_tutorial_07.py  run_tutorial_08.py  run_tutorial_6.py  validation_output.txt
Reference_project/: haar_structure_function.py  sequence_gen.py  sim_GW.py
air_quality_report/: Daily_Air_Quality_summary.txt
assets/: Daily_air_quality.xlsx  readme_summary.txt
data/: sp500_fred.csv
docs/: CAUSALITY.md  HAAR_ANALYSIS_GUIDE.md  HAAR_IMPLEMENTATION_DETAILS.md  Makefile  SURROGATES_GUIDE.md  WALKTHROUGH.md  WALKTHROUGH_PERCENTILES.md  api_reference.rst  conf.py  dataset_sources.md  getting_started.rst  haar_method_description.md  index.rst  make.bat  methods_summary.md  plan.md  spectral_slope_vs_hurst.md  validation_haar_percentiles.md
example_output/: Nitrate_Concentration_at_Site_A_summary.txt  Peak_Detection_Example_summary.txt  Segmented_Spectrum_Example_summary.txt
examples/: 08-segmented_fitting.ipynb  additional_datasets_report.md  analyze_real_data.py  censored_data.csv  compare_spacing.py  compare_usgs_methods.py  demo.ipynb  demo_stochastic_volatility.py  example_haar_red_noise.py  full_walkthrough.py  generate_all_plots.py  generate_segmentation_plot.py  haar_segmented_example.py  periodic_data.csv  process_usgs_data.py  run_analysis_example.py  run_analysis_from_dataframe.py  run_analysis_from_numpy.py  run_beta_example.py  run_comparison_example.py  run_peak_example.py  run_robust_analysis.py  run_segmented_fitting_example.py  run_two_breakpoints_example.py  sample_data.csv  sample_data.json  sample_data.xlsx  sample_data_with_errors.csv  segmented_data.csv  simulated_ecoli.csv  test_haar_uneven.py  usgs_conductance_05420500.csv  usgs_conductance_potomac_01646500.csv  usgs_discharge_05451500.csv  usgs_discharge_potomac_01646500.csv  usgs_nitrate_wapello_05465500.csv  usgs_turbidity_05420500.csv  validate_beta_estimation.py
new_example_output/: Nitrate Concentration_summary.txt
output_demo_90/: Value_summary.txt
output_demo_mean/: Value_summary.txt
readme_output/: Nitrate_Concentration_summary.txt
results/: ANALYSIS_REPORT.md  HAAR_RESULTS.md
scripts/: benchmark_tk95.py  fetch_usgs_data.py  generate_docs_outputs.py  generate_readme_assets.py  regenerate_report.py  reproduce_red_noise_psresp.py  run_batch_haar.py  run_comprehensive_analysis.py  show_benchmarks.py
tests/: test_analysis.py  test_audit_verification.py  test_bivariate.py  test_bivariate_defensible.py  test_bivariate_new.py  test_bivariate_percentiles.py  test_bootstrap.py  test_carma_model.py  test_causality.py  test_changepoint.py  test_comparison.py  test_data_loader.py  test_edge_cases.py  test_error_propagation.py  test_fitter.py  test_frequency_generator.py  test_haar.py  test_haar_aggregation.py  test_haar_monte_carlo.py  test_haar_new.py  test_haar_statistics.py  test_init.py  test_intermittency.py  test_interpreter.py  test_ls_cross_spectrum.py  test_multifractal_slopes.py  test_multivariate.py  test_plotting.py  (+20 more)
(+135 files in other folders)
