[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waterSpec"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Python package for spectral analysis of environmental time series."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "astropy",
    "openpyxl",
    "piecewise-regression",
    "statsmodels",
]

[project.optional-dependencies]
test = [
    "pytest",
]
examples = [
    "fbm",
]
validation = [
    "rpy2",
]
dev = [
    "black",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/example/waterSpec"
"Bug Tracker" = "https://github.com/example/waterSpec/issues"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F", "W", "I", "UP"]
lint.line-length = 88
