[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waterSpec"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Python package for spectral analysis of environmental time series."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "pandas>=2.3.2",
    "matplotlib>=3.10.6",
    "astropy>=7.1.0",
    "openpyxl>=3.1.5",
    "piecewise-regression>=1.5.0",
    "statsmodels>=0.14.5",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
]
examples = [
    "fbm",
]
validation = [
    "rpy2",
]
dev = [
    "black",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/example/waterSpec"
"Bug Tracker" = "https://github.com/example/waterSpec/issues"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP"]
