[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waterSpec"
version = "0.1.0"
description = "A Python package for spectral analysis of environmental time series."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "astropy>=5.0.0",
    "openpyxl>=3.0.0",
    "piecewise-regression>=1.5.0",
    "mannks>=0.5.0",
    "statsmodels>=0.14.0",
    "ruptures>=1.1.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
examples = [
    "fbm",
]
validation = [
    "rpy2",
]
dev = [
    "black",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/example/waterSpec"
"Bug Tracker" = "https://github.com/example/waterSpec/issues"

[tool.setuptools.package-data]
waterSpec = ["*.json"]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP"]
